# exchange-shielded-sdk

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY-AUDIT-COMPLETE.md  SECURITY.md  eslint.config.js  jest.config.js  package-lock.json  package.json  progress.md  tsconfig.json
.github/workflows/: ci.yml
docs/: API.md  INTEGRATION-GUIDE.md  SECURITY-BEST-PRACTICES.md
examples/: basic-withdrawal.ts  compliance-setup.ts  rate-limiting.ts
python/: README.md  pyproject.toml  setup.py
python/exchange_shielded_sdk/: __init__.py  client.py
src/: address-validator.ts  index.ts  rpc-client.ts  transaction-builder.ts
src/compliance/: audit-logger.ts  compliance.ts  index.ts
src/sdk/: exchange-sdk.ts  index.ts
src/security/: index.ts  key-manager.ts  rate-limiter.ts  sanitizer.ts
src/storage/: index.ts  interfaces.ts  memory.ts
src/types/: dto.ts  index.ts  money.ts
src/utils/: amounts.ts  index.ts  logger.ts
src/validation/: index.ts  ingest.ts
tests/: address-validator.test.ts  amounts.test.ts  audit-logger.test.ts  concurrency.test.ts  dto-boundary.test.ts  fuzz.test.ts  integration.test.ts  logger.test.ts  money-safety.test.ts  rate-limiter.test.ts  rpc-client.test.ts  security.test.ts  storage.test.ts  transaction-builder.test.ts
